--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link id="tema" id="theme" rel="stylesheet">
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="653809366667-ejh6461otdir1l0egjug7aj8tah4q0dp.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
